<resources>
    <string name="app_name">Do It</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="fragment_tasklist">TaskList</string>
    <string name="fragment_completed_tasks">Finished Tasks</string>
    <string name="fragment_today">Today</string>
    <string name="fragment_calendar">Calendar</string>
    <string name="fragment_report">Report</string>
    <string name="fragment_send">Send Task</string>

    <string name="task_editor">Add new Task</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_details">More Details</string>

    <string name="task_overview">Overview</string>
    <string name="hint_task_title">Title</string>
    <string name="hint_task_desc">Description</string>
    <string name="hint_task_note">Note</string>
    <string name="hint_task_time">Time</string>
    <string name="hint_task_date">Date</string>

    <string name="editor_insert_task_failed">Error with saving task</string>
    <string name="editor_insert_task_successful">Task Saved</string>
    <string name="editor_update_task_failed">Error with updating task</string>
    <string name="editor_update_task_successful">Task updated</string>

    <string name="task_list_activity_title">Tasklist</string>
    <string name="finished_task_list_activity_title">Finished Tasklist</string>
    <string name="task_details_activity_title">Task Details</string>
    <string name="editor_activity_title_new_task">New Task</string>
    <string name="editor_activity_title_edit_task">Edit Task</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>

    <string name="delete_dialog_msg">Do you want to delete this task?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="editor_delete_task_failed">Error deleting task</string>
    <string name="editor_delete_task_successful">Task deleted</string>
    <string name="task_completed">Task completed</string>

    <string name="default_priority">Priority</string>
    <string name="low_priority">Low Priority</string>
    <string name="mid_priority">Medium Priority</string>
    <string name="high_priority">High Priority</string>

    <string name="date_created">Sort by Date Created</string>
    <string name="date">Sort by Date</string>
    <string name="priority">Sort by Priority</string>
    <string name="sort_title">Sort by Title</string>

    <string name="settings_title">Settings</string>
    <string name="settings_snooze_time_label">Snooze Time</string>
    <string name="settings_snooze_time_key">snooze_time</string>
    <string name="settings_snooze_time_default">5</string>
    <string name="settings_first_day_label">First Day of the Week</string>
    <string name="settings_first_day_key">first_day</string>
    <string name="settings_first_day_default">@string/settings_monday_value</string>

    <string name="settings_sunday">Sunday</string>
    <string name="settings_sunday_value">1</string>
    <string name="settings_monday">Monday</string>
    <string name="settings_monday_value">2</string>
    <string name="settings_tuesday">Tuesday</string>
    <string name="settings_tuesday_value">3</string>
    <string name="settings_wednesday">Wednesday</string>
    <string name="settings_wednesday_value">4</string>
    <string name="settings_thursday">Thursday</string>
    <string name="settings_thursday_value">5</string>
    <string name="settings_friday">Friday</string>
    <string name="settings_friday_value">6</string>
    <string name="settings_saturday">Saturday</string>
    <string name="settings_saturday_value">7</string>

</resources>
