<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EditorActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="0"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                style="@style/CategoryStyle"
                android:text="Title: " />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <EditText
                    android:id="@+id/send_task_title"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_task_title"
                    android:inputType="textCapSentences|textMultiLine" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="0"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                style="@style/CategoryStyle"
                android:text="Note: " />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <EditText
                    android:id="@+id/send_task_note"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_task_note"
                    android:inputType="textCapSentences|textMultiLine" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Due Date" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="16dp">


            <FrameLayout
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="24dp"
                android:background="@drawable/buttonshape">
                    <Button
                        android:id="@+id/send_task_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:drawableLeft="@drawable/baseline_access_time_white_24"
                        android:text="   SELECT TIME"
                        android:textColor="@android:color/white"
                        android:textSize="12dp" />

                    <Button
                        android:id="@+id/send_cancel_time"
                        android:layout_width="24dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="right"
                        android:background="@android:color/transparent"
                        android:drawableLeft="@drawable/baseline_cancel_white_18"
                        android:visibility="gone" />

            </FrameLayout>

            <FrameLayout
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/buttonshape">
                    <Button
                        android:id="@+id/send_task_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:drawableLeft="@drawable/baseline_insert_invitation_white_24"
                        android:text="   SELECT DATE"
                        android:textColor="@android:color/white"
                        android:textSize="12dp" />

                    <Button
                        android:id="@+id/send_cancel_date"
                        android:layout_width="24dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="right"
                        android:background="@android:color/transparent"
                        android:drawableLeft="@drawable/baseline_cancel_white_18"
                        android:visibility="gone" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CategoryStyle"
                android:text="Priority: " />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <Spinner
                    android:id="@+id/spinner_priority"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CategoryStyle"
                android:paddingTop="16dp"
                android:paddingBottom="12dp"
                android:text="Description" />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="240dp"
            android:layout_margin="8dp"
            android:background="@drawable/text_background">
            <EditText
                android:gravity="top|left"
                android:padding="8dp"
                android:id="@+id/send_task_desc"
                style="@style/EditorFieldStyle"
                android:layout_width="match_parent"
                android:minHeight="234dp"
                android:layout_height="match_parent"
                android:hint="@string/hint_task_desc"
                android:background="@android:color/transparent"
                android:inputType="textMultiLine|textCapSentences" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>