<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditorActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:background="@drawable/action_bar"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/action_bar"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/CategoryStyle"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="Title: " />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:paddingLeft="4dp">

                    <EditText
                        android:id="@+id/edit_task_title"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/hint_task_title"
                        android:inputType="textCapSentences|textMultiLine" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/CategoryStyle"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="Note: " />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:paddingLeft="4dp">

                    <EditText
                        android:id="@+id/edit_task_note"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/hint_task_note"
                        android:inputType="textCapSentences|textMultiLine" />

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/CategoryStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Due Date" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="16dp">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="24dp"
                    android:layout_weight="1"
                    android:background="@drawable/buttonshape">

                    <Button
                        android:id="@+id/task_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:drawableLeft="@drawable/baseline_access_time_white_24"
                        android:text="   SELECT TIME"
                        android:textColor="@android:color/white"
                        android:textSize="12dp" />

                    <Button
                        android:id="@+id/cancel_time"
                        android:layout_width="24dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="right"
                        android:background="@android:color/transparent"
                        android:drawableLeft="@drawable/baseline_cancel_white_18"
                        android:visibility="gone" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/buttonshape">


                    <Button
                        android:id="@+id/task_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:drawableLeft="@drawable/baseline_insert_invitation_white_24"
                        android:text="   SELECT DATE"
                        android:textColor="@android:color/white"
                        android:textSize="12dp" />

                    <Button
                        android:id="@+id/cancel_date"
                        android:layout_width="24dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="right"
                        android:background="@android:color/transparent"
                        android:drawableLeft="@drawable/baseline_cancel_white_18"
                        android:visibility="gone" />
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="4dp">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/buttonshape">

                        <Button
                            android:id="@+id/set_alarm"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@android:color/transparent"
                            android:drawableLeft="@drawable/baseline_add_alert_white_24"
                            android:paddingLeft="16dp"
                            android:paddingRight="24dp"
                            android:text="   SET ALARM"
                            android:textColor="@android:color/white"
                            android:textSize="12dp" />

                        <Button
                            android:id="@+id/cancel_alarm"
                            android:layout_width="24dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="right"
                            android:background="@android:color/transparent"
                            android:drawableLeft="@drawable/baseline_cancel_white_18"
                            android:visibility="gone" />

                    </FrameLayout>
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/CategoryStyle"
                    android:text="Priority: " />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:paddingLeft="4dp">

                    <Spinner
                        android:id="@+id/spinner_priority"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:spinnerMode="dropdown" />
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/CategoryStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:paddingTop="16dp"
                    android:paddingBottom="12dp"
                    android:text="Description" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/text_background"
                android:minHeight="240dp">

                <EditText
                    android:id="@+id/edit_task_desc"
                    style="@style/EditorFieldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:gravity="top|left"
                    android:hint="@string/hint_task_desc"
                    android:inputType="textMultiLine|textCapSentences"
                    android:minHeight="234dp"
                    android:padding="8dp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>